# Titanh

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  metadata.scale
api/: Cargo.toml  chain-metadata.scale
api/src/: builder.rs  lib.rs
api/src/app_registrar/: mod.rs
api/src/capsules/: mod.rs  types.rs  utils.rs
api/src/capsules/container/: document.rs  mod.rs
api/src/common/: mod.rs  types.rs
api/src/pinning_committee/: calls.rs  crypto.rs  mod.rs  types.rs
cli/ipfs-cli-key/: Cargo.toml
cli/ipfs-cli-key/src/: main.rs
cli/ipfs-key/: Cargo.toml
cli/ipfs-key/src/: main.rs
cli/pinning-committee/: Cargo.toml
cli/pinning-committee/src/: main.rs  node_leave.rs
config/: customSpec.json  customSpecRaw.json  password.txt
docker/: .env  Dockerfile  docker-compose.yml
docker/config/: pinning-node-1.json
docker/config/chain-specs/: titanhSpec.json  titanhSpecRaw.json
docker/config/ipfs/: bootnodes.json  ipfs-keys-1.json  ipfs-keys-2.json
docker/config/pinning/container-1/node-1/: ipfs-pubkeys.json  ipfs_seeds
docker/config/pinning/container-1/node-2/: ipfs-pubkeys.json  ipfs_seeds
docker/config/pinning/container-1/node-3/: ipfs-pubkeys.json  ipfs_seeds
docker/config/pinning/container-2/node-1/: ipfs_seeds
docker/config/pinning/container-2/node-2/: ipfs-pubkeys.json  ipfs_seeds
docker/config/pinning/container-2/node-3/: ipfs-pubkeys.json  ipfs_seeds
docker/config/pinning/node-2/virtual-1/: ipfs-pubkeys.json
docker/dockerfiles/: ipfs.Dockerfile  pinning-node.Dockerfile  pinning-tmp.Dockerfile  pinning.Dockerfile  substrate.Dockerfile  titanh-substrate.Dockerfile
docker/scripts/ipfs/: bootnodes.json  export.sh  ipfs-daemon.sh  ipfs-init.sh  run-node.sh  run-nodes-2.sh  run-nodes-tmp.sh  run-nodes.sh
docker/scripts/network/: build-network.sh  change-permission.sh  start-network.sh
docker/scripts/pinning/: entrypoint.sh  kill-node.sh  kill-virtual-node.sh  leave-pinning-committee.sh  register-node.sh  register-nodes.sh  run-node-tmp.sh  run-node.sh  run-nodes.sh
docker/scripts/substrate/: insert-keys.sh  run-node.sh  validator-entrypoint.sh
docker/scripts/substrate-node/: insert-keys.sh  run-node.sh  validator-entrypoint.sh
docker/substrate-client/: Dockerfile
example/: Cargo.toml
example/data/: config.json
example/src/: main.rs  types.rs  utils.rs
garbage-collector/: Cargo.toml
garbage-collector/src/: garbage_consumer.rs  main.rs  utils.rs
ipfs-client/: Dockerfile
keys/: chain_accounts.txt
metrics/: Cargo.toml
metrics/data/: batch_metrics.csv  get_metrics.csv  put_metrics.csv
metrics/results/first_test/data/: batch_metrics.csv  get_metrics.csv  put_metrics.csv
metrics/results/second_test/data/: batch_metrics.csv  get_metrics.csv  put_metrics.csv
metrics/scripts/: graphic_generator.py  plot_generator.py
metrics/src/: cli.rs  main.rs  metrics.rs  types.rs  utils.rs
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  rpc.rs  service.rs
pallets/app-registrar/: Cargo.toml
pallets/app-registrar/src/: lib.rs  traits.rs  types.rs
pallets/capsules/: Cargo.toml
pallets/capsules/src/: capsule.rs  container.rs  document.rs  impl_utils.rs  impls.rs  lib.rs  types.rs
pallets/capsules/src/capsule/: impls.rs  types.rs
pallets/capsules/src/container/: impls.rs  mod.rs  types.rs
pallets/common-types/: Cargo.toml
pallets/common-types/src/: lib.rs
pallets/pinning-committee/: Cargo.toml
pallets/pinning-committee/src/: lib.rs  types.rs
pallets/pinning-nodes-manager/: Cargo.toml
pallets/pinning-nodes-manager/src/: lib.rs  types.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  types.rs
pinning-node/: Cargo.toml  api.rs  metadata.scale
pinning-node/config/: chain-metadata.scale  pinning-config.json
pinning-node/src/: cli.rs  controller.rs  lib.rs  main.rs
pinning-node/src/controller/: mod.rs  pinning.rs  pinning_control.rs
pinning-node/src/db/: checkpointing.rs  mod.rs
pinning-node/src/events/: consumer.rs  producer.rs
pinning-node/src/events/dispatcher/: db_dispatcher.rs  keys_dispatcher.rs  mod.rs  pin_dispatcher.rs  traits.rs
pinning-node/src/ipfs/: client.rs  client_builder.rs
pinning-node/src/substrate/: client.rs  client2.rs  client_builder.rs  mod.rs
pinning-node/src/types/: batch.rs  chain.rs  channels.rs  checkpoint.rs  cid.rs  events.rs  events_pool.rs  ipfs.rs  keytable.rs  mod.rs  pinning.rs  ring.rs
pinning-node/src/types/events/: batch.rs  dispatcher.rs  events_pool.rs  mod.rs
pinning-node/src/utils/: api.rs  capsules.rs  config.rs  mod.rs  ref_builder.rs  traits.rs
primitives/: Cargo.toml
primitives/src/: common_types.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  validator_manager.rs
store-subscriber/: Cargo.toml
store-subscriber/src/: main.rs
store-subscriber/src/types/: chain.rs
store-subscriber/src/utils/: api.rs  mod.rs  substrate_api.rs  substrate_storage.rs
substrate/: Cargo.toml  Dockerfile  customSpec.json  customSpecRaw.json  rust-toolchain.toml
substrate/node/: Cargo.toml
substrate/node/src/: command.rs  main.rs  service.rs
substrate/pallets/app-registrar/: Cargo.toml
substrate/pallets/app-registrar/src/: lib.rs  traits.rs  types.rs
substrate/pallets/capsules/: Cargo.toml
substrate/pallets/capsules/src/: benchmarking.rs  lib.rs  tests.rs  types.rs  weights.rs
substrate/pallets/capsules/src/capsule/: impls.rs  types.rs
substrate/pallets/capsules/src/container/: impls.rs  types.rs
substrate/pallets/pinning-committee/: Cargo.toml
substrate/pallets/pinning-committee/src/: lib.rs  types.rs
substrate/primitives/: Cargo.toml
substrate/primitives/src/: common_types.rs  lib.rs
substrate/runtime/: Cargo.toml
substrate/runtime/src/: lib.rs  validator_manager.rs
substrate/titanh-node/: Cargo.toml
substrate/titanh-node/src/: benchmarking.rs  chain_spec.rs
tests/: Cargo.toml
tests/ring/: node-1.txt  node-2.txt  node-4.txt  node-5.txt  node-6.txt
tests/ring-after-leave/: leave_info.txt  node-3.txt  node-4.txt  node-5.txt
tests/src/: main.rs  mocks.rs
