[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]

# crates.io
tokio = { version = "1.37.0", features = ["full"] }
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"


# substrate
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
	"derive",
] }

# titanh api
titan-api = {package = "api", path = "../api" }

