[package]
name = "metrics"
version = "0.1.0"
edition = "2021"


[dependencies]

# crates.io
clap = { version = "4.5.18", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
hex = "0.4.3"
anyhow = "1.0.86"
rand = "0.8.5"
csv = "1.3.0"


# substrate
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
	"derive",
] }
sp-core = { version = "31.0.0", features = ["full_crypto", "serde"] }

# titanh api
titan-api = {package = "api", path = "../api" }

