[package]
name = "pinning_node"
description = "Node that subscribes to store events and sends IPFS pinning requests"
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# crates.io
clap = { version = "4.4.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }

# Substrate dependencies
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
	"derive",
] }
sp-core = { version = "31.0.0", features = ["full_crypto", "serde"] }
sp-crypto-hashing = "0.1.0"
subxt = { version = "0.37.0", features = ["substrate-compat"] }
primitives = { path = "../primitives" }

# KV database
sled = "0.34"





# IPFS dependencies
ipfs-api-backend-hyper = "0.6"

# Utils
env_logger = "0.11"
log = "0.4.14"
url = "2.5.0"
anyhow = "1.0.86"
hex-literal = "0.4.1"




