[package]
name = "store_subscriber_node"
description = "Node that subscribes to store events and sends IPFS pinning requests"
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }


# Substrate dependencies
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", features = ["full_crypto", "serde"] }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", branch = "master"}

# IPFS dependencies

# Utils
env_logger = "0.11"
log = "0.4.14"
url = "2.5.0"



