[package]
name = "pinning-committee"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
sp-core = { version = "34.0.0" }
tokio = { version = "1.37.0", features = ["full"] }
pem = "3.0.4"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"

# titanh api
api = { path = "../../api"}

# pinning lib to access checkpointing db operations
pinning = { package = "pinning_node", path = "../../pinning-node" }

# ipfs
ipfs-api-backend-hyper = "0.6"